colab runtime update

--- a/5_Analysis_classification/1_classification.ipynb
+++ b/5_Analysis_classification/1_classification.ipynb
@@ -45,53 +45,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e8170e4",
+   "id": "556d3edc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# NBVAL_SKIP\n",
-    "!if [ -n \"$COLAB_GPU\" ]; then pip install condacolab; fi\n",
+    "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then pip install condacolab; fi\n",
     "import condacolab\n",
-    "condacolab.install()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7919f92c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# NBVAL_SKIP\n",
+    "condacolab.install()\n",
+    "\n",
     "import condacolab\n",
-    "condacolab.check()\n",
-    "!mamba install -c conda-forge mdanalysis mdanalysistests mdanalysisdata nglview scikit-learn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ffc5d301",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# NBVAL_SKIP\n",
+    "!mamba install -c conda-forge mdanalysis mdanalysistests mdanalysisdata nglview scikit-learn ipywidgets=7.6.0\n",
+    "\n",
     "# enable third party jupyter widgets\n",
     "from google.colab import output\n",
-    "output.enable_custom_widget_manager()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99c43637",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# NBVAL_SKIP\n",
-    "# copy over data repository\n",
-    "!if [ -n \"$COLAB_GPU\" ]; then git clone https://github.com/CCPBioSim/MDAnalysis_ML_workshop; fi\n",
-    "!if [ -n \"$COLAB_GPU\" ]; then cp -r MDAnalysis_ML_workshop/ML/data .; fi"
+    "output.enable_custom_widget_manager()\n",
+    "\n",
+    "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then git clone https://github.com/CCPBioSim/CCP5_Simulation_of_BioMolecules; fi\n",
+    "import os\n",
+    "os.chdir(f\"CCP5_Simulation_of_BioMolecules{os.sep}5_Analysis_classification\")"
    ]
   },
   {
