--- a/4_Analysis_DR_clustering/3_clustering.ipynb
+++ b/4_Analysis_DR_clustering/3_clustering.ipynb
@@ -44,9 +44,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Google Colab installs\n",
+    "## Google Colab setup\n",
     "\n",
-    "Please only run this if you are working on this notebook via Google Colab"
+    "<div class=\"alert alert-warning\">\n",
+    "<b>Attention:</b> Please only run the following cells if you are using Colab! These cells install necessary packages and download data.</div>"
    ]
   },
   {
@@ -60,12 +61,26 @@
     "condacolab.install()\n",
     "\n",
     "import condacolab\n",
-    "!mamba install -c conda-forge mdanalysis mdanalysistests mdanalysisdata nglview scikit-learn ipywidgets=7.6.0\n",
-    "\n",
+    "!mamba install -c conda-forge mdanalysis mdanalysistests mdanalysisdata nglview scikit-learn ipywidgets=7.6.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# enable third party jupyter widgets\n",
     "from google.colab import output\n",
-    "output.enable_custom_widget_manager()\n",
-    "\n",
+    "output.enable_custom_widget_manager()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then git clone https://github.com/CCPBioSim/CCP5_Simulation_of_BioMolecules; fi\n",
     "import os\n",
     "os.chdir(f\"CCP5_Simulation_of_BioMolecules{os.sep}4_Analysis_DR_clustering\")"
