--- a/4_Analysis_DR_clustering/2_DR_part2.ipynb
+++ b/4_Analysis_DR_clustering/2_DR_part2.ipynb
@@ -33,9 +33,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Google Colab package installs\n",
+    "## Google Colab setup\n",
     "\n",
-    "This installs the necessary packages for Google Colab. Please only run these if you are using Colab."
+    "<div class=\"alert alert-warning\">\n",
+    "<b>Attention:</b> Please only run the following cells if you are using Colab! These cells install necessary packages and download data.</div>"
    ]
   },
   {
@@ -49,15 +50,36 @@
     "condacolab.install()\n",
     "\n",
     "import condacolab\n",
-    "!mamba install -c conda-forge mdanalysis mdanalysistests mdanalysisdata nglview scikit-learn ipywidgets=7.6.0\n",
-    "\n",
+    "!mamba install -c conda-forge mdanalysis mdanalysistests mdanalysisdata nglview scikit-learn ipywidgets=7.6.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# enable third party jupyter widgets\n",
     "from google.colab import output\n",
-    "output.enable_custom_widget_manager()\n",
-    "\n",
+    "output.enable_custom_widget_manager()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then git clone https://github.com/CCPBioSim/CCP5_Simulation_of_BioMolecules; fi\n",
     "import os\n",
     "os.chdir(f\"CCP5_Simulation_of_BioMolecules{os.sep}4_Analysis_DR_clustering\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Introduction"
    ]
   },
   {
@@ -84,13 +106,6 @@
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. Introduction"
    ]
   },
   {
