--- a/5_Analysis_classification/1_classification.ipynb
+++ b/5_Analysis_classification/1_classification.ipynb
@@ -37,15 +37,16 @@
    "id": "e3071838",
    "metadata": {},
    "source": [
-    "## Google Colab package installs\n",
+    "## Google Colab setup\n",
     "\n",
-    "This installs the necessary packages for Google Colab. Please only run these if you are using Colab."
+    "<div class=\"alert alert-warning\">\n",
+    "<b>Attention:</b> Please only run the following cells if you are using Colab! These cells install necessary packages and download data.</div>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "556d3edc",
+   "id": "730f07ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,15 +55,39 @@
     "condacolab.install()\n",
     "\n",
     "import condacolab\n",
-    "!mamba install -c conda-forge mdanalysis mdanalysistests mdanalysisdata nglview scikit-learn ipywidgets=7.6.0\n",
-    "\n",
+    "!mamba install -c conda-forge mdanalysis mdanalysistests mdanalysisdata nglview scikit-learn ipywidgets=7.6.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5707cb60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# enable third party jupyter widgets\n",
     "from google.colab import output\n",
-    "output.enable_custom_widget_manager()\n",
-    "\n",
+    "output.enable_custom_widget_manager()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5257ae4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then git clone https://github.com/CCPBioSim/CCP5_Simulation_of_BioMolecules; fi\n",
     "import os\n",
     "os.chdir(f\"CCP5_Simulation_of_BioMolecules{os.sep}5_Analysis_classification\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc15ee17",
+   "metadata": {},
+   "source": [
+    "## 1. Introduction"
    ]
   },
   {
@@ -91,14 +116,6 @@
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dc15ee17",
-   "metadata": {},
-   "source": [
-    "## 1. Introduction"
    ]
   },
   {
