MDAnalysis folder added
renumbered everything that follows, including paths in notebooks

--- a/5_Analysis_DR_clustering/3_clustering.ipynb
+++ b/5_Analysis_DR_clustering/3_clustering.ipynb
@@ -83,7 +83,7 @@
    "source": [
     "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then git clone https://github.com/CCPBioSim/CCP5_Simulation_of_BioMolecules; fi\n",
     "import os\n",
-    "os.chdir(f\"CCP5_Simulation_of_BioMolecules{os.sep}4_Analysis_DR_clustering\")"
+    "os.chdir(f\"CCP5_Simulation_of_BioMolecules{os.sep}5_Analysis_DR_clustering\")"
    ]
   },
   {
@@ -101,7 +101,7 @@
     "\n",
     "Clustering is the grouping of data points which are similar to each other. It can be a powerful technique for identifying patterns in data. Clustering analysis does not usually require any training and is known as an *unsupervised learning* technique. The lack of a need for training means it can be applied quickly. Application of clustering are:\n",
     "- Looking for trends in data\n",
-    "- Data compression, all data clustering around a point can be reduced to just that point. For example, reducing colour depth of an image.\n",
+    "- Data compression, all data clustering around a point can be reduced to just that point (e.g., reducing colour depth of an image).\n",
     "- Pattern recognition"
    ]
   },
