adding colab for mdanalysis

--- a/4_Analysis_MDAnalysis/MD_01_System_Manipulation.ipynb
+++ b/4_Analysis_MDAnalysis/MD_01_System_Manipulation.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,9 +162,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** ERROR ***\n",
+      "In order to run the MDAnalysis test cases you must install the\n",
+      "MDAnalysisTestData package (which has been separated from the \n",
+      "library code itself since release 0.7.4). Go to \n",
+      "\n",
+      "     http://pypi.python.org/pypi/MDAnalysisTests\n",
+      "\n",
+      "and download and install the `MDAnalysisTests-x.y.z.tar.gz'\n",
+      "that matches your MDAnalysis release.\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "MDAnalysisTests package not installed.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mMDAnalysis\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtests\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatafiles\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m PSF, DCD\n",
+      "File \u001b[0;32m~/mambaforge/envs/mdml_workshop/lib/python3.11/site-packages/MDAnalysis/tests/datafiles.py:52\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mand download and install the `MDAnalysisTests-x.y.z.tar.gz\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     51\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mthat matches your MDAnalysis release.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 52\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMDAnalysisTests package not installed.\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: MDAnalysisTests package not installed."
+     ]
+    }
+   ],
    "source": [
     "from MDAnalysis.tests.datafiles import PSF, DCD"
    ]
@@ -1204,9 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# NBVAL_RAISES_EXCEPTION\n",
@@ -1493,7 +1519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
@@ -1510,5 +1536,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
