update jupyterlab MDAnalysis

--- a/4_Analysis_MDAnalysis/MD_01_System_Manipulation.ipynb
+++ b/4_Analysis_MDAnalysis/MD_01_System_Manipulation.ipynb
@@ -14,6 +14,10 @@
     "- Dr Richard Gowers - richardjgowers@gmail.com\n",
     "- Dr Irfan Alibay - ialibay@gmail.com\n",
     "\n",
+    "Updates made by:\n",
+    "- Dr Antonia Mey - antonia.mey@ed.ac.uk\n",
+    "- Dr Matteo Degiacomi - matteo.t.degiacomi@durham.ac.uk\n",
+    "\n",
     "This notebook is adapted from materials developed for the [2022 CCPBioSim Workshop](https://github.com/MDAnalysis/WorkshopMDMLEdinburgh2022), which was in turn adapted from the [2021 PRACE Workshop](https://github.com/MDAnalysis/WorkshopPrace2021) and the [2018 Workshop/Hackathon](https://github.com/MDAnalysis/WorkshopHackathon2018)."
    ]
   },
@@ -21,21 +25,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Google Colab package installs\n",
+    "## Google Colab setup\n",
+    "<div class=\"alert alert-warning\">\n",
+    "<b>Attention:</b> Please only run the following cells if you are using Colab! These cells install necessary packages and download data.</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then pip install condacolab; fi\n",
+    "import condacolab\n",
+    "condacolab.install()\n",
     "\n",
-    "This installs the necessary packages for Google Colab. Please only run these if you are using Colab."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# NBVAL_SKIP\n",
-    "!if [ -n \"$COLAB_GPU\" ]; then pip install condacolab; fi\n",
     "import condacolab\n",
-    "condacolab.install()"
+    "!mamba install -c conda-forge mdanalysis mdanalysistests mdanalysisdata nglview scikit-learn ipywidgets=7.6.0"
    ]
   },
   {
@@ -44,22 +50,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# NBVAL_SKIP\n",
-    "import condacolab\n",
-    "condacolab.check()\n",
-    "!mamba install -c conda-forge mdanalysis mdanalysistests mdanalysisdata nglview"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# NBVAL_SKIP\n",
     "# enable third party jupyter widgets\n",
     "from google.colab import output\n",
     "output.enable_custom_widget_manager()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then git clone https://github.com/CCPBioSim/CCP5_Simulation_of_BioMolecules; fi\n",
+    "import os\n",
+    "os.chdir(f\"CCP5_Simulation_of_BioMolecules{os.sep}4_Analysis_MDAnalysis\")"
    ]
   },
   {
@@ -141,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,37 +166,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*** ERROR ***\n",
-      "In order to run the MDAnalysis test cases you must install the\n",
-      "MDAnalysisTestData package (which has been separated from the \n",
-      "library code itself since release 0.7.4). Go to \n",
-      "\n",
-      "     http://pypi.python.org/pypi/MDAnalysisTests\n",
-      "\n",
-      "and download and install the `MDAnalysisTests-x.y.z.tar.gz'\n",
-      "that matches your MDAnalysis release.\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "MDAnalysisTests package not installed.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mMDAnalysis\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtests\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatafiles\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m PSF, DCD\n",
-      "File \u001b[0;32m~/mambaforge/envs/mdml_workshop/lib/python3.11/site-packages/MDAnalysis/tests/datafiles.py:52\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mand download and install the `MDAnalysisTests-x.y.z.tar.gz\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     51\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mthat matches your MDAnalysis release.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 52\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMDAnalysisTests package not installed.\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[0;31mImportError\u001b[0m: MDAnalysisTests package not installed."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from MDAnalysis.tests.datafiles import PSF, DCD"
    ]
@@ -463,9 +439,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 1\n",
-    "\n",
-    "### 1a. Load the GRO topology file from `MDAnalysis.tests.datafiles` and count how many atoms, residues and segments it contains.**"
+    "<div class=\"alert alert-success\">\n",
+    "<b>Task 1a: </b> Load the GRO topology file from `MDAnalysis.tests.datafiles` and count how many atoms, residues and segments it contains.\n",
+    "</div>"
    ]
   },
   {
@@ -474,7 +450,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 1a"
+    "# Task 1a\n"
    ]
   },
   {
@@ -484,32 +460,33 @@
     "solution2_first": true
    },
    "source": [
-    "### Solution 1a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "solution2": "hidden"
-   },
-   "outputs": [],
-   "source": [
+    "<details>\n",
+    "<summary> <mark> Solution: </mark> </summary>\n",
+    "\n",
+    "```Python\n",
+    "\n",
     "from MDAnalysis.tests.datafiles import GRO\n",
     "u_gro = mda.Universe(GRO)\n",
     "print('Atoms: ', u_gro.atoms.n_atoms)\n",
     "print('Residues: ', u_gro.residues.n_residues)\n",
-    "print('Segments: ', u_gro.segments.n_segments)"
+    "print('Segments: ', u_gro.segments.n_segments)\n",
+    "\n",
+    "```\n",
+    "</details>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1b. From the above universe, find the name of the:**\n",
-    "  - first segment\n",
-    "  - last atom\n",
-    "  - 10th residue."
+    "<div class=\"alert alert-success\">\n",
+    "<b>Task 1b: </b>  From the above universe, find the name of the:\n",
+    "    <ul>\n",
+    "    <li>first segment</li>\n",
+    "    <li>last atom</li>\n",
+    "    <li>10th residue</li>\n",
+    "    </ul>\n",
+    "</div>\n"
    ]
   },
   {
@@ -518,7 +495,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 1b\n"
+    "# Task 1b\n"
    ]
   },
   {
@@ -528,20 +505,17 @@
     "solution2_first": true
    },
    "source": [
-    "### Solution 1b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "solution2": "hidden"
-   },
-   "outputs": [],
-   "source": [
+    "<details>\n",
+    "<summary> <mark> Solution: </mark> </summary>\n",
+    "\n",
+    "```Python\n",
+    "\n",
     "print('First segment:', u_gro.segments[0].segid)\n",
     "print('Last atom: ', u_gro.atoms[-1].name)\n",
-    "print('10th residue: ', u_gro.residues[9].resname)"
+    "print('10th residue: ', u_gro.residues[9].resname)\n",
+    "\n",
+    "```\n",
+    "</details>"
    ]
   },
   {
@@ -915,9 +889,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 2\n",
-    "\n",
-    "### 2a. Select residues 100 to 200, first using indexing and then using a selection string, and confirm you get the same selection."
+    "<div class=\"alert alert-success\">\n",
+    "<b>Task 2a: </b> Select residues 100 to 200, first using indexing and then using a selection string, and confirm you get the same selection.\n",
+    "</div>"
    ]
   },
   {
@@ -926,7 +900,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 2a\n"
+    "# Task 2a\n"
    ]
   },
   {
@@ -936,20 +910,17 @@
     "solution2_first": true
    },
    "source": [
-    "### Solution 2a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "solution2": "hidden"
-   },
-   "outputs": [],
-   "source": [
+    "<details>\n",
+    "<summary> <mark> Solution: </mark> </summary>\n",
+    "\n",
+    "```Python\n",
+    "\n",
     "ag1 = u.residues[99:200]\n",
     "ag2 = u.select_atoms(\"resid 100-200\").residues\n",
-    "ag1 == ag2"
+    "ag1 == ag2\n",
+    "\n",
+    "```\n",
+    "</details>"
    ]
   },
   {
@@ -965,7 +936,9 @@
     "cell_style": "center"
    },
    "source": [
-    "### 2b. Count the number of arginine residues"
+    "<div class=\"alert alert-success\">\n",
+    "<b>Task 2b: </b> Count the number of arginine residues.\n",
+    "</div>"
    ]
   },
   {
@@ -974,7 +947,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 2b\n"
+    "# Task 2b\n"
    ]
   },
   {
@@ -984,26 +957,24 @@
     "solution2_first": true
    },
    "source": [
-    "### Solution 2b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "solution2": "hidden"
-   },
-   "outputs": [],
-   "source": [
+    "<details>\n",
+    "<summary> <mark> Solution: </mark> </summary>\n",
+    "\n",
+    "```Python\n",
+    "\n",
     "ag = u.select_atoms('resname ARG')\n",
-    "print(len(ag.residues))"
+    "print(len(ag.residues))\n",
+    "```\n",
+    "</details>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2c. Select all nitrogen atoms within 5.0A of an alpha carbon atom"
+    "<div class=\"alert alert-success\">\n",
+    "<b>Task 2c: </b> Select all nitrogen atoms within 5.0A of an alpha carbon atom.\n",
+    "</div>"
    ]
   },
   {
@@ -1012,7 +983,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 2c\n"
+    "# Task 2c\n"
    ]
   },
   {
@@ -1022,26 +993,24 @@
     "solution2_first": true
    },
    "source": [
-    "### Solution 2c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "solution2": "hidden"
-   },
-   "outputs": [],
-   "source": [
+    "<details>\n",
+    "<summary> <mark> Solution: </mark> </summary>\n",
+    "\n",
+    "```Python\n",
+    "\n",
     "ag = u.select_atoms('name N* and around 5 name CA')\n",
-    "print(ag)"
+    "print(ag)\n",
+    "```\n",
+    "</details>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2d. Select all hydrogens that are bonded to an alpha carbon\n",
+    "<div class=\"alert alert-success\">\n",
+    "<b>Task 2d: </b> Select all hydrogens that are bonded to an alpha carbon.\n",
+    "</div>\n",
     "\n",
     "*Hint: Look through the `select_atoms` docstring above or [here](https://docs.mdanalysis.org/2.0.0-dev0/documentation_pages/selections.html) for keywords that might help!*"
    ]
@@ -1062,19 +1031,15 @@
     "solution2_first": true
    },
    "source": [
-    "### Solution 2d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "solution2": "hidden"
-   },
-   "outputs": [],
-   "source": [
+    "<details>\n",
+    "<summary> <mark> Solution: </mark> </summary>\n",
+    "\n",
+    "```Python\n",
+    "\n",
     "ag = u.select_atoms('name H* and bonded name CA')\n",
-    "print(ag)"
+    "print(ag)\n",
+    "```\n",
+    "</details>"
    ]
   },
   {
@@ -1162,14 +1127,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Show all atoms that are below the plane x=4.0"
+    "<div class=\"alert alert-success\">\n",
+    "<b>Task 3: </b> Show all atoms that are below the plane x=4.0.\n",
+    "</div>"
    ]
   },
   {
@@ -1178,7 +1138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 3\n"
+    "# Task 3\n"
    ]
   },
   {
@@ -1188,20 +1148,16 @@
     "solution2_first": true
    },
    "source": [
-    "### Solution 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "solution2": "hidden"
-   },
-   "outputs": [],
-   "source": [
+    "<details>\n",
+    "<summary> <mark> Solution: </mark> </summary>\n",
+    "\n",
+    "```Python\n",
+    "\n",
     "ag = u.select_atoms('prop x < 4')\n",
     "view_ex3 = nv.show_mdanalysis(ag)\n",
-    "view_ex3"
+    "view_ex3\n",
+    "```\n",
+    "</details>"
    ]
   },
   {
@@ -1455,9 +1411,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 4\n",
-    "\n",
-    "Calculate the angle between the C$\\alpha$ atoms in the fifth, sixth and seventh residue."
+    "<div class=\"alert alert-success\">\n",
+    "<b>Task 4: </b> Calculate the angle between the C$\\alpha$ atoms in the fifth, sixth and seventh residue.\n",
+    "</div>"
    ]
   },
   {
@@ -1466,7 +1422,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Solution\n",
+    "## Task 4\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary> <mark> Solution: </mark> </summary>\n",
+    "\n",
+    "```Python\n",
     "\n",
     "at1 = u.residues[4].atoms.select_atoms('name CA')\n",
     "at2 = u.residues[5].atoms.select_atoms('name CA')\n",
@@ -1474,7 +1440,9 @@
     "\n",
     "ag = at1 + at2 + at3\n",
     "\n",
-    "ag.angle.value()"
+    "ag.angle.value()\n",
+    "```\n",
+    "</details>"
    ]
   },
   {
@@ -1495,11 +1463,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "-----"
+   ]
   }
  ],
  "metadata": {
@@ -1519,7 +1487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": 1,
