--- a/4_Analysis_MDAnalysis/MD_01_System_Manipulation.ipynb
+++ b/4_Analysis_MDAnalysis/MD_01_System_Manipulation.ipynb
@@ -4,19 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Session 1.1: Loading and Manipulating Your Molecular Simulation Data\n",
-    "\n",
+    "# Manipulating Molecular Simulation Data with MDAnalysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Creative Commons Licence\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/88x31.png\" title='This work is licensed under a Creative Commons Attribution 4.0 International License.' align=\"right\"/></a>\n",
+    "**Authors**:\n",
     "\n",
-    "Authors: \n",
-    "\n",
-    "- Dr Micaela Matta - micaela.matta@kcl.ac.uk \n",
-    "- Dr Richard Gowers - richardjgowers@gmail.com\n",
-    "- Dr Irfan Alibay - ialibay@gmail.com\n",
-    "\n",
-    "Updates made by:\n",
-    "- Dr Antonia Mey - antonia.mey@ed.ac.uk\n",
-    "- Dr Matteo Degiacomi - matteo.t.degiacomi@durham.ac.uk\n",
+    "- *Creation*: Dr Micaela Matta (micaela.matta@kcl.ac.uk), Dr Richard Gowers (richardjgowers@gmail.com), Dr Irfan Alibay (ialibay@gmail.com)\n",
+    "- *Updates*: Dr Antonia Mey (antonia.mey@ed.ac.uk), Dr Matteo Degiacomi (matteo.t.degiacomi@durham.ac.uk)\n",
     "\n",
     "This notebook is adapted from materials developed for the [2022 CCPBioSim Workshop](https://github.com/MDAnalysis/WorkshopMDMLEdinburgh2022), which was in turn adapted from the [2021 PRACE Workshop](https://github.com/MDAnalysis/WorkshopPrace2021) and the [2018 Workshop/Hackathon](https://github.com/MDAnalysis/WorkshopHackathon2018)."
    ]
@@ -70,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Jupyter cheat sheet**:\n",
+    "## Jupyter cheat sheet\n",
     "- to run the currently highlighted cell, hold <kbd>&#x21E7; Shift</kbd> and press <kbd>&#x23ce; Enter</kbd>;\n",
     "- to get help for a specific function, place the cursor within the function's brackets, hold <kbd>&#x21E7; Shift</kbd>, and press <kbd>&#x21E5; Tab</kbd>;"
    ]
@@ -88,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Learning outcomes:\n",
+    "## Learning outcomes\n",
     "* How to load your molecular simulation data into MDAnalysis\n",
     "* Basic features of the `MDAnalysis.Universe`\n",
     "* Visualise your simulation data with `nglview`\n",
@@ -107,7 +106,6 @@
     "\n",
     "\n",
     "**Additional resources**\n",
-    " - During the workshop, feel free to ask questions at any time\n",
     " - For more on how to use MDAnalysis, see the [User Guide](https://userguide.mdanalysis.org/2.0.0-dev0/) and [documentation](https://docs.mdanalysis.org/2.0.0-dev0/)\n",
     " - Ask questions on the [user mailing list](https://groups.google.com/group/mdnalysis-discussion) or on [Discord](https://discord.gg/fXTSfDJyxE)\n",
     " - Report bugs on [GitHub](https://github.com/MDAnalysis/mdanalysis/issues?)"
@@ -136,8 +134,7 @@
     "\n",
     "## Universe loading 101\n",
     "\n",
-    "> \"If you wish to make an apple pie from scratch, you must first invent the Universe.\" \n",
-    "\n",
+    "> \"*If you wish to make an apple pie from scratch, you must first invent the Universe.*\" \n",
     "> ~ Carl Sagan\n",
     "\n",
     "First, we need to import `MDAnalysis`, giving us access to all the components in its namespace:"
@@ -159,7 +156,7 @@
     "One of the most fundamental objects in the `MDAnalysis` data model is the `Universe` object.\n",
     "A `Universe` can be thought of as an interface to all the data of a simulation;\n",
     "it contains all of a simulations' topology information (names, charges, masses etc) at the least,\n",
-    "but usually also includes trajectory information (positions, velocities etc) as well.\n",
+    "but usually also includes trajectory information (positions, velocities, etc.) as well.\n",
     "\n",
     "In order to do anything, we do need some actual molecular dynamics data to work with. Let's load an example (the protein adenylate kinase, or AdK) from the MDAnalysis tests data:"
    ]
@@ -1412,7 +1409,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-success\">\n",
-    "<b>Task 4: </b> Calculate the angle between the C$\\alpha$ atoms in the fifth, sixth and seventh residue.\n",
+    "<b>Task 4: </b> Calculate the angle between the C$\\alpha$ atoms in the fifth, sixth, and seventh residue.\n",
     "</div>"
    ]
   },
@@ -1458,8 +1455,9 @@
    "source": [
     "- If you haven't already, read through the [selection documentation](https://docs.mdanalysis.org/2.0.0-dev0/documentation_pages/selections.html) and play around with all the selection options not covered above\n",
     "\n",
+    "- Do you want to know more about MDAnalysis, and in particular how to extract geometric information from trajectories? Have a look the Jupyter notebook [Extra_MD_02_Distances_Trajectories.ipynb](Extra_MD_02_Distances_Trajectories.ipynb)\n",
     "\n",
-    "- [nglview](https://github.com/nglviewer/nglview#usage) has a lot of visualisation options - you can add multiple selections to one view, change their colour and representation style and more - look through their documentaiton and see what you can create!"
+    "- [nglview](https://github.com/nglviewer/nglview#usage) has a lot of visualisation options - you can add multiple selections to one view, change their colour and representation style and more. Look through their documentaiton and see what you can create!"
    ]
   },
   {
@@ -1487,7 +1485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.12"
   },
   "toc": {
    "base_numbering": 1,
