--- a/5_Analysis_DR_clustering/1_DR_part1.ipynb
+++ b/5_Analysis_DR_clustering/1_DR_part1.ipynb
@@ -49,6 +49,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Google Colab setup\n",
+    "\n",
+    "<div class=\"alert alert-warning\">\n",
+    "<b>Attention:</b> Please only run the following cell if you are using Colab! This cell will download data required for Section 4 of this tutorial.</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then git clone https://github.com/CCPBioSim/CCP5_Simulation_of_BioMolecules; fi\n",
+    "import os\n",
+    "os.chdir(f\"CCP5_Simulation_of_BioMolecules{os.sep}5_Analysis_DR_clustering\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1. Introduction"
    ]
   },
